# file-share

./: .gitignore  CHANGELOG.md  DISTRIBUTION.md  GITHUB-RELEASE.md  GITHUB_RELEASE_STEPS.md  LICENSE  LINUX_DISTRIBUTION.md  MANIFEST.in  MOBILE_ALTERNATIVES.md  PKGBUILD  README-LINUX-GUI.md  README-LINUX.md  README.md  RELEASE_GUIDE.md  REMOTE_CONTROL_GUIDE.md  USER_GUIDE.md  admin_pages.py  auth_server.py  build-deb.sh  build-rpm.sh  build_all.sh  build_all_packages.sh  build_app.py  build_installer.py  build_release.sh  build_simple.sh  build_with_venv.py  cleanup.sh  com.realwebthings.fileshare.json  config.py  control_panel.py  create_better_installer.py  create_binary_installer.py  create_compiled_release.py  create_direct_installer.py  create_distribution_packages.py  create_gui_launcher.py  create_linux_bundle.py  create_release_assets.py  create_releases.py  (+33 more)
debian/: control
linux/: DEBIAN-UBUNTU.md  FLATPAK-FLATHUB.md  GITHUB-RELEASE.md  GITHUB-RELEASES.md  README.md  REDHAT-FEDORA.md  SNAP-STORE.md  build-all.py  build-deb.py  build-flatpak.py  build-rpm.py  build-run.py  build-snap.py
snap/: snapcraft.yaml
templates/: admin.html  control_panel.html  directory.html  login.html  message.html  register.html  welcome.html
